--- a/src/resources/css/install.scss
+++ b/src/resources/css/install.scss
@@ -19,7 +19,7 @@ h1 { margin-bottom: 35px; text-align: center; }
 
 .buttons { position: absolute; bottom: 35px; right: 35px; }
 .buttons .btn { padding-right: 10px; }
-.buttons .btn:after { @include icon; margin: 2px 0 0 8px; font-size: 20px; width: 20px; content: '→'; }
+.buttons .btn:after { @include icon; margin-left: 8px; font-size: 20px; width: 20px; content: '→'; }
 .buttons .btn.loading:after { height: 24px; content: ''; background: url(../images/submit-spinner.gif) no-repeat 0 0; }
 
 .dots { position: absolute; bottom: 10px; left: 50%; margin-left: -15px; }
